[Ubuntu] Print Preview is refreshed after closing Page Setup prompt
Categories
(Core :: Print Preview, defect)
Tracking
()
People
(Reporter: vlucaci, Assigned: jfkthame)
Details
Attachments
(2 files)
Affected versions
- 68.11.0esr
- 80.0a1(2020-07-21)
Affected platforms
- Ubuntu 18.04
Steps to reproduce
- Launch FF.
- Go to www.pdf995.com/samples/pdf.pdf.
- Print preview the page.
- Go to Page Setup...
- Press Escape.
Expected result
- The Page Setup prompt is closed without any issues.
Actual result
- Closing the Page Setup prompt renders the whole Print Preview to be refreshed.
Regression range
- I went as far back as builds from 2016-04-04 and the issue occurs with the same repro steps. I do not think that this is a regression.
Additional notes
- In order of consistency, the same behavior should be kept as for the Print... prompt from Print Preview.
- Seeing as how it would only be a nuisance for users who scroll a document, then lose the position when closing the Page Setup... prompt, I would consider this issue an S3.
| Assignee | ||
Comment 1•5 years ago
|
||
If Page Setup settings are changed, we currently completely regenerate the print preview (bug 1653340 should make it possible to improve this).
However, in this case it sounds like we're doing that even if Page Setup was cancelled, making no changes. That seems like a bug in its own right; if the Page Setup dialog is cancelled, we shouldn't need to recreate or update the preview at all.
| Assignee | ||
Comment 2•5 years ago
|
||
Vlad, have you checked if this also occurs on Windows, or is it specific to Linux only?
| Reporter | ||
Comment 3•5 years ago
|
||
Hello Jonathan,
Yes, I have tried it on Windows as well and this issue is not present.
For Windows, print preview regenerates only if changes are made.
| Assignee | ||
Comment 4•5 years ago
|
||
It appears the gtk_print_run_page_setup_dialog function just doesn't return any indication of whether the user cancelled or confirmed the dialog.
So to check whether we need to regenerate the preview, we can do things the hard way: compare the old and new settings, and bail out without refreshing the preview if they're identical.
| Assignee | ||
Comment 5•5 years ago
|
||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 7•5 years ago
|
||
| bugherder | ||
Comment 8•5 years ago
|
||
The patch landed in nightly and beta is affected.
:jfkthame, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 9•5 years ago
|
||
This is basically a cosmetic issue and has been around a long time; it can just ride the train.
Updated•5 years ago
|
Updated•5 years ago
|
Description
•