Bug 1654484 - Don't regenerate print preview on Linux if Page Setup dialog is opened but cancelled or closed without changes. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D84679